<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardarEstudiantes">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="48dp">

        <EditText
            android:id="@+id/edGuardarCarnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2mm"
            android:hint="@string/carnet"/>
        <EditText
            android:id="@+id/edGuardarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2mm"
            android:hint="@string/nombre"/>
        <EditText
            android:id="@+id/edGuardarApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2mm"
            android:hint="@string/apellido"/>
        <EditText
            android:id="@+id/edGuardarCarrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2mm"
            android:hint="@string/carrera"/>

        <EditText
            android:id="@+id/edGuardaranio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/anio"
            android:padding="2mm" />
        <Button
            android:id="@+id/btGuardarEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>