<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CumCalculateScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="48dp">
        <ImageButton
            android:id="@+id/btMEstudiante"
            android:layout_width="208dp"
            android:layout_height="154dp"
            android:background="@color/white"
            android:contentDescription="@string/mDescripcionEstudiante"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/estudiante"
            android:onClick="guardarEstudiante"/>

        <TextView
            android:id="@+id/tvEstudiante"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingVertical="1mm"
            android:text="@string/mEstudiante"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/btMNotas"
            android:layout_width="208dp"
            android:layout_height="154dp"
            android:background="@color/white"
            android:contentDescription="@string/mDescripcionNotas"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/calificaciones"
            android:onClick="guardarNotas"/>

        <TextView
            android:id="@+id/tvNotas"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/mNotas"
            android:textAlignment="center" />
        <ImageButton
            android:id="@+id/btMRegistro"
            android:scaleType="fitCenter"
            android:src="@drawable/registro"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/mDescripcionRegistro"
            android:layout_width="208dp"
            android:layout_height="154dp"
            android:onClick="registroAcademico"/>

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mRegistro"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>